# Mesh-Skeleton-Tool

./: CMakeLists.txt  README.md  Steps.txt  readme.txt
MeshSkeleton/: CMakeLists.txt
MeshSkeleton/algorithm/include/: center_of_points.h  normal_estimator.h  primitive_fitting.h
MeshSkeleton/algorithm/src/: center_of_points.cpp  normal_estimator.cpp  primitive_fitting.cpp
MeshSkeleton/basic/include/: basic_types.h  counted.h  file_system.h  line_stream.h  smart_pointer.h  stop_watch.h
MeshSkeleton/basic/src/: basic_types.cpp  counted.cpp  file_system.cpp  stop_watch.cpp
MeshSkeleton/geometry/include/: attribute.h  box_3d.h  box_facet.h  color.h  colormap.h  cylinder.h  facet.h  facet_edge.h  file_io.h  geometry_global.h  geometry_types.h  mesh.h  model.h  normalizer.h  object.h  point_set.h  prism.h  skeleton.h  vertex.h
MeshSkeleton/geometry/kdtree/: PriorityQueue.h  QueryGrid.h  kdTree.cpp  kdTree.h  vector2D.h  vector3D.h
MeshSkeleton/geometry/src/: box_3d.cpp  box_facet.cpp  cylinder.cpp  facet.cpp  file_io.cpp  geometry_global.cpp  mesh.cpp  model.cpp  normalizer.cpp  object.cpp  point_set.cpp  prism.cpp  skeleton.cpp
MeshSkeleton/include/: mainwindow.h  paint_canvas.h  select_node_tool.h  select_slice_tool.h  tool3D.h  tool_manager3d.h  tool_name.h
MeshSkeleton/resources/: mainwindow.qrc  mainwindow.ui
MeshSkeleton/src/: main.cpp  mainwindow.cpp  paint_canvas.cpp  select_node_tool.cpp  select_slice_tool.cpp  tool3D.cpp  tool_manager3d.cpp
data/: cheb.cg  deer.cg
